# pianoscorefromyoutube

./: .gitignore  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  download-ffmpeg.ps1  main.js  main.py  package.json  preload.js  pyproject.toml  setup-gpu.js  test-basic-pitch.js  validate.js
.claude/: settings.local.json
cache/: index.json
src/main/: audio-converter.js  cache-manager.js  demucs_runner.py  file-manager.js  ipc-handlers.js  sheet-generator.js  spleeter_runner.py  stem-separator.js  transcribe-worker.js  transcriber.js  youtube-downloader.js
src/music.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/renderer/: index.html
src/renderer/scripts/: app.js  progress-handler.js  rhythm-game-ui.js  rhythm-game.js  ui-controller.js
src/renderer/styles/: main.css  rhythm-game.css
