[project]
name = "music"
version = "0.1.0"
description = "Local music utilities (Demucs stem separation)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "demucs>=4.0.0",
  "soundfile>=0.12.0",
]

[tool.uv]
# Windows/AMD64 전용
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

# PyTorch CUDA 11.8 인덱스 (GTX 1660 Super / Turing CC 7.5)
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
